# src/routes/categories.routes.ts
@@ -2,8 +2,8 @@ import { Router, request, response } from "express"
 import multer from "multer"
 
 import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"
-import { listCategoriesController } from "../modules/cars/useCases/listCategories"
-import { importCategoryController } from "../modules/cars/useCases/importCategory"
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController"
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController"
 
 const categoriesRoutes = Router()
 
@@ -12,16 +12,14 @@ const upload = multer({
 })
 
 const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
 
 categoriesRoutes.post("/", createCategoryController.handle)
 
-categoriesRoutes.get("/", (req, res) => {
-    return listCategoriesController.handle(req, res)
-})
+categoriesRoutes.get("/", listCategoriesController.handle)
 
-categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-    return importCategoryController.handle(req, res)
-})
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle)
 
 
 export { categoriesRoutes }
