# src/routes/specification.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from "express"
 import { SpecificationRepository } from "../modules/cars/repositories/implementations/SpecificationRepository"
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification"
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController"
 
 const specificationRoutes = Router()
 
-specificationRoutes.post("/", (req, res) => {
-    return createSpecificationController.handle(req, res)
-})
+const createSpecificationController = new CreateSpecificationController()
+
+specificationRoutes.post("/", createSpecificationController.handle)
 
 export { specificationRoutes }
